Implement append-only metadata cache with versioning and replay capabilities